editor.scss
@import url("https://fonts.googleapis.com/css?family=Lato:400,400italic,700,700italic,900,900italic");

@import "stylesheets/variables/index";
@import "stylesheets/inc/index";

:root {}

@import "stylesheets/typography";
@import "stylesheets/elements-common";

@import "css/blocks.scss";

.editor-default-block-appender input[type="text"].editor-default-block-appender__content,
.editor-post-title .editor-post-title__input,
.edit-post-visual-editor,
.edit-post-visual-editor p {
	font-family: $x-font-family-body;
}

.edit-post-layout__content .edit-post-visual-editor {
	overflow-x: hidden;
}

// Editor title font size.

.editor-post-title .editor-post-title__input {
	font-size: $x-font-size-xl;
	font-weight: 900;
	@include media( tablet ) {
		font-size: calc( #{$x-font-size-xxxl} * 1.175 );
	}
}

// Editor font size.

body, p {
	font-size: $x-font-size-base;

	@include media(tablet) {
		font-size: 1.05em;
	}
}

#editor .components-notice {
	&, p {
		font-size: 1rem;
	}
}

// Editor width.
.editor-post-title,
.editor-block-list__block {
	margin: 0 auto;
	@include media( desktop ) {
		max-width: $x-grid-column-7;
		min-width: calc( #{$x-grid-column-7} * 1.03 );
	}
}

.wp-block-columns .editor-block-list__block {
	min-width: auto;
}

.editor-block-list__block[data-type="core/table"] .wp-block-table {
	max-width: 100%;
}

.editor-block-list__block[data-type="core/table"][data-align=center] table {
	width: 100%;
}

// Line height.

.editor-rich-text__tinymce.mce-content-body {
	line-height: $x-font-leading-body;
}

.editor-block-list__block-edit {
	
}

// List styles.

.block-library-list {
	
	.editor-rich-text__tinymce {
		margin-left: 0;
	}
	
	ol {
		list-style: none;
		padding-left: 0;
		> li {

				counter-increment: sans-counter;
				position: relative;
				padding-left: $x-space-md;

				ol li {
					padding-left: $x-space-md;
				}

				ul li {
					padding-left: $x-space-sm;
				}

				&:before {
					content: counter(sans-counter, decimal-leading-zero) "\00a0";
					left: 0;
					position: absolute;
					top: $x-space-xxs;
					color: $x-color-primary-base;
					font-family: $x-font-family-heading;
					font-size: $x-font-size-xs;
					line-height: $x-font-leading-md;
				}
			}
	}
}

.gutenberg .wp-block-categories ul,
.gutenberg .wp-block-latest-posts,
.gutenberg ul.wp-block-archives {
	padding-left: .5em;
}

// Separators

hr {
	background-color: $x-color-shade-gray-2;
	border: 0;
	height: 3px;
	margin-bottom: 1.5em;
}

// Blockquote

.edit-post-visual-editor .editor-block-list__block[data-align=full] {
	> .editor-block-list__block-edit {
		margin-left: 0;
		margin-right: 0;
	}
	
	.wp-block-pullquote blockquote {
		max-width: calc( 100vw - 2em );
	}
}

.wp-block-pullquote blockquote >.block-library-pullquote__content .editor-rich-text__tinymce[data-is-empty=true]:before,
.wp-block-pullquote blockquote>.editor-rich-text p {
	font-size: calc( #{$x-font-size-md} * 1.056 );
}

blockquote {

	max-width: 1100px;
	margin: 0 auto;
	border-left-color: $x-color-accent-base !important;
	
	&.wp-block-quote,
	&.wp-block-quote.is-large,
	&.wp-block-quote.is-style-large {

		@include media(tablet) {
			margin-right: 0;
		}
	}

	.wp-block-quote__citation {
		padding-left: $x-space-sm;
	}
}

// Pull quote

.wp-block-pullquote {
	border-bottom: none;
	border-top: none;
}

// Columns

.wp-block-text-columns,
.wp-block-columns {
	@include media(tablet) {
		margin-right: 0;
	}
}

// Images

.wp-block-image {
	figcaption {
		margin-top: 0.8em;
	}
}

// Tables
.wp-block-table td ,
.wp-block-table th {
	border-width: 0;
}

// Latest Posts

.wp-block-categories,
.wp-block-archives,
.wp-block-latest-posts,
.wp-block-latest-comments {
	font-size: calc( #{$x-font-size-md} * 0.86 );
	li a {
		@include box-shadow-underline;
	}
}

.wp-caption .wp-caption-text,
.wp-block-audio figcaption,
.wp-block-video figcaption,
.wp-block-image figcaption,
.wp-block-gallery .blocks-gallery-image figcaption,
.wp-block-gallery .blocks-gallery-item figcaption,
.wp-block-quote .wp-block-quote__citation,
.wp-block-pullquote .wp-block-pullquote__citation,
.wp-block-pullquote cite {
	font-size: calc( #{$x-font-size-sm} * 1.05 );
}

.wp-block-gallery .blocks-gallery-item figcaption {
	margin-bottom: -10px;
}

.wp-block-gallery.alignfull {
	max-width: 100%;
	width: calc( 100% - 2 * 1em );
	margin: 0 auto;
}

.edit-post-visual-editor .editor-block-list__block[data-align=full] {
	padding: 0;
}

